添加车牌识别ocr sdk

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,3 +3,4 @@ jdk:
 install:
   - mvn install:install-file -Dfile=lib/masmgc-sdk-0.0.1.jar -DgroupId=com.masmgc -DartifactId=masmgc-sdk -Dversion=0.0.1 -Dpackaging=jar
   - mvn install:install-file -Dfile=lib/fcms-lib-1.0.0.jar -DgroupId=com.sansi -DartifactId=fcms-lib -Dversion=1.0.0 -Dpackaging=jar
+  - mvn install:install-file -Dfile=lib/ocr-release.aar -DgroupId=com.example.ocr -DartifactId=ocr -Dversion=1.0 -Dpackaging=aar
